Implementation of Milvus loader.